force-app/main/default/objects/Factura_line_item__c/Factura_line_item__c.object-meta.xml
<CustomObject>
    <label>Factura line item</label>
    <nameField>
        <label>Factura line item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Factura line items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>