force-app/main/default/objects/Factura_line_item__c/fields/Base_imponible__c.field-meta.xml
<CustomField>
    <fullName>Base_imponible__c</fullName>
    <label>Base imponible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>