force-app/main/default/objects/Factura_line_item__c/fields/Descuento__c.field-meta.xml
<CustomField>
    <fullName>Descuento__c</fullName>
    <label>% Descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>