force-app/main/default/objects/Factura_line_item__c/fields/ID_Factura__c.field-meta.xml
<CustomField>
    <fullName>ID_Factura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ID Factura</label>
    <referenceTo>Factura__c</referenceTo>
    <relationshipLabel>Factura line items</relationshipLabel>
    <relationshipName>Factura_line_items</relationshipName>
    <type>Lookup</type>
</CustomField>