force-app/main/default/objects/Factura_line_item__c/fields/Product_ID_Vindicia__c.field-meta.xml
<CustomField>
    <fullName>Product_ID_Vindicia__c</fullName>
    <label>Producto ID Vindicia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>