force-app/main/default/objects/Factura_line_item__c/fields/TAX__c.field-meta.xml
<CustomField>
    <fullName>TAX__c</fullName>
    <label>TAX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>