force-app/main/default/objects/Factura_line_item__c/fields/TAX_Percent__c.field-meta.xml
<CustomField>
    <fullName>TAX_Percent__c</fullName>
    <label>% TAX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>